change 'tags:' to 'categories:'

--- a/source/_posts/2009-07-03-walki-talkicom-london-tour-available-on-the-app-store.html
+++ b/source/_posts/2009-07-03-walki-talkicom-london-tour-available-on-the-app-store.html
@@ -1,7 +1,7 @@
 --- 
 title: Walki-Talki.com London tour available on the App Store
 status: publish
-tags: 
+categories: 
 - Software
 - iPhone
 layout: post
