import remaining content

--- a/source/notes/note-1-test/index.html
+++ b/source/notes/note-1-test/index.html
@@ -1,8 +1,9 @@
 --- 
 title: FreeRTOS on an Arduino board with Eclipse
 status: publish
-tags: 
-- Misc.
+categories: 
+- Misc
+- programming
 layout: page
 meta: 
   _wp_page_template: default
