--- a/source/notes/index.html
+++ b/source/notes/index.html
@@ -1,8 +1,10 @@
 --- 
 title: Notes
 status: publish
-tags: 
-- Misc.
+categories: 
+- Misc
+- Notes
+- Incomplete
 layout: page
 meta: 
   _edit_lock: "1306440987"
@@ -11,6 +13,5 @@ meta:
 type: page
 published: true
 ---
-Some information I have found useful, presented direct from my brain. This is probably more useful to me than to anyone else. I might put it here or as a sub-page (see link to the right).
 
-In progress:  <a href="http://tomwhipple.com/projects/explorations/html/wavelets.html">Wavelets</a>
+In progress: <a href="http://tomwhipple.com/projects/explorations/html/wavelets.html">Wavelets</a>
