formatting & spelling errors. Oh my.

--- a/source/_posts/2008-09-13-huh.html
+++ b/source/_posts/2008-09-13-huh.html
@@ -13,4 +13,4 @@ Speaking of the PCH:
 <p style="text-align: center"><img src="/img/badsign.JPG" title="WARNING: persons present in the Santa Monica Palisades Bluff are prohibited by SMMC" alt="WARNING: persons present in the Santa Monica Palisades Bluff are prohibited by SMMC" height="356" width="393" /></p>
 What??
 
-Isn't it just easier to say "KEEP OUT" or "NO TRESSPASSING"?
+Isn't it just easier to say "KEEP OUT" or "NO TRESPASSING"?
