--- a/source/_posts/2008-10-11-configuring-cvs-for-apples-xcode-projects.html
+++ b/source/_posts/2008-10-11-configuring-cvs-for-apples-xcode-projects.html
@@ -28,5 +28,5 @@ These steps seem to work:
 	<li>Click "Checkout" and choose the directory where you will do your work. (This is NOT the temporary project directory you created in step 2.)</li>
 	<li>XCode will ask you if you want to open the project when it is done with the checkout. If the checkout directory structure looks good, you should delete the temporary directory.</li>
 </ol>
-NOTE: If some subset of the builds directory shows up under the SCM tool on the left of the project tab, go to <strong>SCM&gt;Refresh Entire Project </strong>BEFORE the build directory gets commited.
-NOTE 2: If the build directory gets commited by mistake, delete it from the repository, the local directory structure, and the corresponding entry in the projectdir/CVS/Entries file.
+NOTE: If some subset of the builds directory shows up under the SCM tool on the left of the project tab, go to <strong>SCM&gt;Refresh Entire Project </strong>BEFORE the build directory gets committed.
+NOTE 2: If the build directory gets committed by mistake, delete it from the repository, the local directory structure, and the corresponding entry in the projectdir/CVS/Entries file.
