--- a/source/_posts/2008-10-22-fire-season-again.html
+++ b/source/_posts/2008-10-22-fire-season-again.html
@@ -9,9 +9,9 @@ meta: {}
 type: post
 published: true
 ---
-This year the fires are hitting a little closer to home. (Fortunately, everything seems to be OK so far.) A couple weeks ago there was a <a href="http://www.venturacountystar.com/news/2008/oct/12/fire-burns-7-acres-in-ventura-river-bed/">fire in the Ventura River bottom</a>. Today, a <a href="http://www.venturacountystar.com/news/2008/oct/22/small-fire-ventura/">more serious fire</a> started on the edge of town and moved up into the hills. The entire hillside burned, but by the time I saw it, it was just a black hill with a bit of smoke coming off. It must have gone over the ridge, since helicopters were dropping water there. (I can still hear them as I write this.) But there wasn't much smoke coming from the area. It looks like the wind has died for the evening, so I would be suprised if it flares up again.
+This year the fires are hitting a little closer to home. (Fortunately, everything seems to be OK so far.) A couple weeks ago there was a <a href="http://www.venturacountystar.com/news/2008/oct/12/fire-burns-7-acres-in-ventura-river-bed/">fire in the Ventura River bottom</a>. Today, a <a href="http://www.venturacountystar.com/news/2008/oct/22/small-fire-ventura/">more serious fire</a> started on the edge of town and moved up into the hills. The entire hillside burned, but by the time I saw it, it was just a black hill with a bit of smoke coming off. It must have gone over the ridge, since helicopters were dropping water there. (I can still hear them as I write this.) But there wasn't much smoke coming from the area. It looks like the wind has died for the evening, so I would be surprised if it flares up again.
 
-But, it looks like a bigger fire must have started up the coast twards Santa Barbra, because there is a lot of smoke blowing out to sea from much farther west.
+But, it looks like a bigger fire must have started up the coast towards Santa Barbra, because there is a lot of smoke blowing out to sea from much farther west.
 
 I took a picture of the sunset and smoke with my iPhone, but can't seem to get it off the phone without a lot of extra hassle. (Apple has been a big disappointment lately, but that's another story.)
 
