--- a/source/_posts/2009-06-11-wwdc-day-4-lots-of-good-stuff.html
+++ b/source/_posts/2009-06-11-wwdc-day-4-lots-of-good-stuff.html
@@ -12,6 +12,6 @@ published: true
 ---
 Wow. We covered a lot of good material today. From advanced debugging techniques to recommendations for best practices in app design it was all very helpful, though again quite boring to a non-developer audience.
 
-The lunchtime talk was about a <a href="http://www.moonviews.com/">techno-archeology project</a> is using Macs to reconstruct moon image data from original NASA analog recordings. The central problem they experianced is that although the media is in good shape, there were no tape machines capable of reading it! Fortunately a couple of units were found in storage on military facilites and were able to be rebuilt for the task.
+The lunchtime talk was about a <a href="http://www.moonviews.com/">techno-archeology project</a> is using Macs to reconstruct moon image data from original NASA analog recordings. The central problem they experienced is that although the media is in good shape, there were no tape machines capable of reading it! Fortunately a couple of units were found in storage on military facilities and were able to be rebuilt for the task.
 
 I'll keep this one short as the next presentation is starting now. After this it's party time!!
