--- a/source/_posts/2009-06-12-wwdc-party-day-5.html
+++ b/source/_posts/2009-06-12-wwdc-party-day-5.html
@@ -12,6 +12,6 @@ published: true
 ---
 The party last night was great! Cake (the band, not the food) played for us for a little more than an hour. I took some pictures, but iPhoto is crashing when I try to download them. (Hey Apple, what's up with that?) It was a true geek party in that the ratio of men to women was about 100:1. One woman actually took a picture of the huge line for the men's room. (Needless to say, there were no lines for the women's.)
 
-This morning I focused on fixing bugs in our app, both serious and trivial. I got some great advice on how to properly design the internals of the application to take full advantage of Apple's architectecture. The Apple engineers have been an enormously valueable source of information from quick tips &amp; tricks to detailed answers.
+This morning I focused on fixing bugs in our app, both serious and trivial. I got some great advice on how to properly design the internals of the application to take full advantage of Apple's architecture. The Apple engineers have been an enormously valuable source of information from quick tips &amp; tricks to detailed answers.
 
 Today's lunchtime speaker was Neil Young (no, not the singer), CEO of <a href="http://blog.ngmoco.com/">Ngmoco</a>. This company was founded in March 2008, as a direct result of the release of the iPhoneOS 2.0, SDK &amp; App Store. It was interesting to hear how quickly they were able to put the whole thing together and begin earning revenue.
