--- a/source/_posts/2008-09-13-iphone-21-software-fail.html
+++ b/source/_posts/2008-09-13-iphone-21-software-fail.html
@@ -13,6 +13,6 @@ So far, the new iPhone software released on Friday doesn't look good. I've had t
 
 Yesterday, the bluetooth headset did not deactivate after a call ended until after I unlocked the phone with the slider dodad.
 
-But the worst happened today. I was driving down the PCH enjoying the day and a listening to a podcast when my phone decided to stop playing the podcast and dial a friend. At first I thought he was calling me, but after an akward confused silance I realized what had happened. Needless to say, this is very bizzare and totally unacceptable. Imagine being in the middle of a personal conversation when your phone decides to call a random contact!!
+But the worst happened today. I was driving down the PCH enjoying the day and a listening to a podcast when my phone decided to stop playing the podcast and dial a friend. At first I thought he was calling me, but after an awkward confused silence I realized what had happened. Needless to say, this is very bizarre and totally unacceptable. Imagine being in the middle of a personal conversation when your phone decides to call a random contact!!
 
 So, 2.0.1 is still looking pretty good.
