--- a/source/_posts/2009-08-06-announcing-smartovation-technologies.html
+++ b/source/_posts/2009-08-06-announcing-smartovation-technologies.html
@@ -11,6 +11,6 @@ meta:
 type: post
 published: true
 ---
-I am very pleased to announce the launch of <a title="Smartovation Technologies" href="http://www.smartovation.com">Smartovation Technologies</a>, a new venture devoted to iPhone and web applications. We expect to be able to submit at least one new App this month. Stay tuned for updates!
+<p>I am very pleased to announce the launch of <a title="Smartovation Technologies" href="http://www.smartovation.com">Smartovation Technologies</a>, a new venture devoted to iPhone and web applications. We expect to be able to submit at least one new App this month. Stay tuned for updates!</p>
 
-And, work continues on the <a href="http://www.walki-talki.com">walki-talk.com</a> audio tour guides.
+<p>And, work continues on the <a href="http://www.walki-talki.com">walki-talk.com</a> audio tour guides.</p>
