--- a/source/projects/explorations/html/wavelets.html
+++ b/source/projects/explorations/html/wavelets.html
@@ -73,7 +73,7 @@ p.footer {
       <div class="content">
          <h1>Exploring Wavelets</h1>
          <introduction>
-            <p>7/5/2008 by Tom Whipple</p>
+            <p>7/5/2008 by <a href="/">Tom Whipple</a></p>
          </introduction>
          <h2>Contents</h2>
          <div>
